add runServer task, update plugin-yml